52_NetworkPolicies/configs/eg4-egress-demo/np-curl-client-access.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: curl-client-access 
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: curl_client
  policyTypes:
    - Egress
  egress:
    - to:
 #     - podSelector:
 #         matchLabels:
 #           component: caddy_pod
      - ipBlock:
          cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 2015
